# btrade

./: .gitignore  FB.csv  FXDE_100101_190816.csv  FXIT_100101_190816.csv  FXMM_100101_190816.csv  FXRB.ME.csv  NVDA.csv  Pipfile  README.md  baselines-test.py  baselines.ipynb  baselines.py  baselines_test.py  bonds.ipynb  bt-strategy-plots.ipynb  bt-strategy-test.ipynb  bt_strategy.py  bt_strategy_test.py  buy_and_hold_plot_nvda.py  correlations.ipynb  dump-ohlcv.sh  fbprophet.ipynb  ohlcv2csv.py  portfolio-value.ipynb  portfolio-value.py  pyproject.toml  random_plot-nvda.py  random_plot.py  random_plot_fxit.py  requirements.txt  seasonal.ipynb  short-term.ipynb  simple_buy_sell_plot.py  simple_buy_sell_plot_nvda.py  stocks-cache.sqlite  strategy-plots.ipynb  strategy-test.ipynb  strategy_test.py  test-etf.py  test-good.py  (+2 more)
data/: BTC-USD.yahoo.csv  CL=F.yahoo.csv  ETH-USD.yfin.csv  FXDE.csv  FXGD.csv  FXGD_100101_190816.csv  FXIT.finam.csv  FXMM.csv  GC=F.csv  RUB=X.csv  RUB=X.yahoo.csv  ZEC-USD.yahoo.csv  ^GSPC.csv  ^IXIC.yahoo.csv
